--- a/css/styles.css
+++ b/css/styles.css
@@ -11,18 +11,30 @@ header {
   height: 80px;
   margin: 0 auto;
   text-align: center;
-  border: 1px solid #fff; }
+  border: 1px solid #fff;
+  box-shadow: -4px 2px 10px rgba(200, 200, 200, 0.5);
+  text-shadow: -2px 2px 6px rgba(200, 200, 200, 0.5); }
+
+footer {
+  width: 700px;
+  height: 50px;
+  margin: 10px auto;
+  text-align: center;
+  border: 1px solid #fff;
+  box-shadow: -4px 2px 10px rgba(200, 200, 200, 0.5);
+  text-shadow: -2px 2px 6px rgba(200, 200, 200, 0.5); }
 
 #container {
   position: relative;
-  width: 750px;
-  height: 450px;
+  width: 800px;
+  height: 500px;
   border: 2px solid grey;
-  margin: 50px auto 0px;
-  border: 2px solid #fff; }
+  margin: 10px auto 0px;
+  border: 2px solid #fff;
+  box-shadow: -4px 4px 10px rgba(200, 200, 200, 0.5); }
   #container img {
-    width: 750px;
-    height: 450px; }
+    width: 800px;
+    height: 500px; }
   #container .view {
     position: absolute;
     top: 0px;
@@ -34,6 +46,8 @@ header {
     z-index: 100; }
   #container .after {
     z-index: 700;
+    -webkit-filter: grayscale(1);
+    -moz-filter: grayscale(1);
     filter: grayscale(1); }
   #container #drag {
     position: absolute;
@@ -46,12 +60,38 @@ header {
     z-index: 400; }
 
 nav {
-  width: 500px;
+  width: 700px;
   height: 60px;
   margin: 10px auto;
-  border: 1px solid #fff; }
+  border: 1px solid #fff;
+  box-shadow: -4px 4px 8px rgba(200, 200, 200, 0.5); }
   nav ul li {
-    margin: 0 42px;
+    margin: 0 40px;
     display: inline-block;
     font-size: 1.1em;
     cursor: pointer; }
+  nav button {
+    width: 110px;
+    font-size: 20px;
+    border-radius: 5px;
+    text-transform: uppercase;
+    cursor: pointer;
+    -webkit-transition: all 0.4s ease;
+    -moz-transition: all 0.4s ease;
+    transition: all 0.4s ease; }
+    nav button:active:after {
+      padding: 0;
+      margin: 0;
+      opacity: 1;
+      -webkit-transition: all 0s;
+      -moz-transition: all 0s;
+      transition: all 0s; }
+    nav button:hover {
+      background: rgba(5, 5, 5, 0.6);
+      color: #00FFFF;
+      -webkit-transition: all 0.3s ease;
+      -moz-transition: all 0.3s ease;
+      transition: all 0.3s ease;
+      -webkit-transform: scale(1.7);
+      -moz-transform: scale(1.7);
+      transform: scale(1.7); }
