--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -4,6 +4,23 @@ $white: #fff;
 $grey: #333;
 $black: #000;
 
+@mixin filter($grayscale) {
+  -webkit-filter: $grayscale;
+     -moz-filter: $grayscale;
+          filter: $grayscale;
+}
+@mixin transition($value) {
+  -webkit-transition: $value;
+     -moz-transition: $value;
+          transition: $value;
+}
+@mixin transform($value) {
+  -webkit-transform: $value;
+     -moz-transform: $value;
+          transform: $value;
+}
+
+
 body {
   background: $grey;
   color: $white;
@@ -17,18 +34,30 @@ header {
   margin: 0 auto;
   text-align: center;
   border: 1px solid $white;
+  box-shadow: -4px 2px 10px rgba(200, 200, 200, 0.5);
+  text-shadow: -2px 2px 6px rgba(200, 200, 200, 0.5);
+}
+footer {
+  width: 700px;
+  height: 50px;
+  margin: 10px auto;
+  text-align: center;
+  border: 1px solid $white;
+  box-shadow: -4px 2px 10px rgba(200, 200, 200, 0.5);
+  text-shadow: -2px 2px 6px rgba(200, 200, 200, 0.5);
 }
 #container {
   position: relative;
-  width: 750px;
-  height: 450px;
+  width: 800px;
+  height: 500px;
   border: 2px solid grey;
-  margin: 50px auto 0px;
+  margin: 10px auto 0px;
   border: 2px solid $white;
+  box-shadow: -4px 4px 10px rgba(200,200,200,0.5);
 
   img {
-    width: 750px;
-    height: 450px;
+    width: 800px;
+    height: 500px;
 
   }
   .view {
@@ -44,7 +73,7 @@ header {
   }
   .after {
     z-index: 700;
-    filter: grayscale(1);
+    @include filter(grayscale(1));
   }
   #drag {
     position: absolute;
@@ -58,15 +87,38 @@ header {
   }
 }
 nav {
-  width: 500px;
+  width: 700px;
   height: 60px;
   margin: 10px auto;
   border: 1px solid $white;
+  box-shadow: -4px 4px 8px rgba(200,200,200,0.5);
 
   ul li{
-    margin: 0 42px;
+    margin: 0 40px;
     display: inline-block;
     font-size: 1.1em;
     cursor: pointer;
   }
+  button {
+    width: 110px;
+    font-size: 20px;
+    border-radius: 5px;
+    text-transform: uppercase;
+    cursor: pointer;
+    @include transition(all 0.4s ease);
+
+    &:active:after {
+      padding: 0;
+      margin: 0 ;
+      opacity: 1;
+      @include transition(all 0s);
+    }
+    &:hover {
+      background: rgba(5,5,5,0.6);
+      color: #00FFFF;
+      @include transition(all .3s ease);
+      @include transform(scale(1.7));
+    }
+  }
+
 }
