--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,8 @@ header {
   border: 1px solid #fff;
   box-shadow: -4px 2px 10px rgba(200, 200, 200, 0.5);
   text-shadow: -2px 2px 6px rgba(200, 200, 200, 0.5); }
+  header h1 {
+    font-size: 2.4em; }
 
 footer {
   width: 700px;
@@ -43,55 +45,140 @@ footer {
     height: 100%;
     overflow: hidden; }
   #container .before {
-    z-index: 100; }
+    z-index: 100%; }
   #container .after {
     z-index: 700;
     -webkit-filter: grayscale(1);
     -moz-filter: grayscale(1);
     filter: grayscale(1); }
   #container #drag {
-    position: absolute;
-    width: 7px;
+    position: relative;
+    width: 8px;
     height: 100%;
     top: 0;
     left: 0;
-    background: #000;
+    background: rgba(30, 30, 30, 0.5);
     cursor: pointer;
     z-index: 400; }
 
 nav {
   width: 700px;
-  height: 60px;
+  height: 70px;
   margin: 10px auto;
   border: 1px solid #fff;
   box-shadow: -4px 4px 8px rgba(200, 200, 200, 0.5); }
   nav ul li {
-    margin: 0 40px;
+    margin: -5px 50px 20px;
     display: inline-block;
     font-size: 1.1em;
-    cursor: pointer; }
-  nav button {
-    width: 110px;
-    font-size: 20px;
-    border-radius: 5px;
-    text-transform: uppercase;
     cursor: pointer;
-    -webkit-transition: all 0.4s ease;
-    -moz-transition: all 0.4s ease;
-    transition: all 0.4s ease; }
-    nav button:active:after {
-      padding: 0;
-      margin: 0;
-      opacity: 1;
-      -webkit-transition: all 0s;
-      -moz-transition: all 0s;
-      transition: all 0s; }
-    nav button:hover {
-      background: rgba(5, 5, 5, 0.6);
-      color: #00FFFF;
-      -webkit-transition: all 0.3s ease;
-      -moz-transition: all 0.3s ease;
-      transition: all 0.3s ease;
-      -webkit-transform: scale(1.7);
-      -moz-transform: scale(1.7);
-      transform: scale(1.7); }
+    color: #000; }
+    nav ul li button {
+      border-radius: 1px;
+      cursor: pointer;
+      font-size: 23px;
+      height: 40px;
+      width: 110px;
+      display: inline-block;
+      position: relative;
+      background: #999;
+      color: #333;
+      box-shadow: -2px 1px 2px rgba(170, 170, 170, 0.6); }
+      nav ul li button:before {
+        pointer-events: none;
+        position: absolute;
+        z-index: -1;
+        content: '';
+        top: 100%;
+        left: 1%;
+        height: 10px;
+        width: 99%;
+        opacity: 0;
+        background: radial-gradient(ellipse at center, rgba(170, 170, 170, 0.7) 0%, rgba(170, 170, 170, 0) 80%);
+        -webkit-transition: transform-opacity;
+        -moz-transition: transform-opacity;
+        transition: transform-opacity; }
+      nav ul li button:hover {
+        -webkit-transform: translateY(-6px);
+        -moz-transform: translateY(-6px);
+        transform: translateY(-6px);
+        -webkit-transition: all 0.3s ease-in-out;
+        -moz-transition: all 0.3s ease-in-out;
+        transition: all 0.3s ease-in-out;
+        background: #00ffff;
+        color: #fff; }
+      nav ul li button:hover:before {
+        opacity: 1;
+        -webkit-transform: translateY(5px);
+        -moz-transform: translateY(5px);
+        transform: translateY(5px);
+        -webkit-transition: all 0.3s ease-in-out;
+        -moz-transition: all 0.3s ease-in-out;
+        transition: all 0.3s ease-in-out; }
+
+.start:hover {
+  -webkit-transform: translateX(20px);
+  -moz-transform: translateX(20px);
+  transform: translateX(20px);
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out; }
+
+.end:hover {
+  -webkit-transform: translateX(-20px);
+  -moz-transform: translateX(-20px);
+  transform: translateX(-20px);
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out; }
+
+@media only screen and (max-width: 768px) {
+  #container {
+    width: 500px;
+    height: 350px; }
+    #container img {
+      width: 500px;
+      height: 350px; }
+  footer {
+    width: 70%;
+    height: 70%; }
+  nav {
+    width: 83%;
+    height: 50px; }
+    nav ul li {
+      margin: -8px 26px 5px; }
+      nav ul li button {
+        width: 80px;
+        height: 30px;
+        font-size: 14px; }
+  header {
+    width: 70%;
+    height: 70%; }
+    header h1 {
+      font-size: 1em; } }
+
+@media only screen and (max-width: 550px) {
+  #container {
+    width: 400px;
+    height: 250px; }
+    #container img {
+      width: 400px;
+      height: 250px; }
+  footer {
+    width: 50%;
+    height: 50%;
+    font-size: 10px; }
+  nav {
+    width: 68%;
+    height: 40px; }
+    nav ul li {
+      margin: -12px 18px 5px; }
+      nav ul li button {
+        width: 53px;
+        height: 15px;
+        font-size: 10px; }
+  header {
+    width: 50%;
+    height: 50%; }
+    header h1 {
+      font-size: .7em; } }
