--- a/css/styles.css
+++ b/css/styles.css
@@ -26,16 +26,27 @@ footer {
   box-shadow: -4px 2px 10px rgba(200, 200, 200, 0.5);
   text-shadow: -2px 2px 6px rgba(200, 200, 200, 0.5); }
 
+#gallery {
+  width: 90px;
+  float: left;
+  border: 1px solid #fff;
+  margin: 30px 7px 0 7px;
+  box-shadow: -2px 3px 6px rgba(200, 200, 200, 0.5); }
+  #gallery img {
+    width: 70px;
+    height: 70px;
+    margin: 10px; }
+
 #container {
   position: relative;
-  width: 800px;
+  width: 750px;
   height: 500px;
   border: 2px solid grey;
   margin: 10px auto 0px;
   border: 2px solid #fff;
   box-shadow: -4px 4px 10px rgba(200, 200, 200, 0.5); }
   #container img {
-    width: 800px;
+    width: 750px;
     height: 500px; }
   #container .view {
     position: absolute;
