--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -57,9 +57,21 @@ footer {
   box-shadow: -4px 2px 10px rgba(200, 200, 200, 0.5);
   text-shadow: -2px 2px 6px rgba(200, 200, 200, 0.5);
 }
+#gallery {
+  width: 90px;
+  float: left;
+  border: 1px solid $white;
+  margin: 30px 7px 0 7px;
+  box-shadow: -2px 3px 6px rgba(200,200,200, 0.5);
+  img {
+    width: 70px;
+    height: 70px;
+    margin: 10px;
+  }
+}
 #container {
   position: relative;
-  width: 800px;
+  width: 750px;
   height: 500px;
   border: 2px solid grey;
   margin: 10px auto 0px;
@@ -67,7 +79,7 @@ footer {
   box-shadow: -4px 4px 10px rgba(200,200,200,0.5);
 
   img {
-    width: 800px;
+    width: 750px;
     height: 500px;
 
   }
@@ -159,7 +171,7 @@ nav {
   @include transition(all .3s ease-in-out);
 }
 
-
+//adjusting size
 @media only screen and (max-width: 768px) {
   #container{
     width: 500px;
